--- a/chunk_includes/consent_2019.html
+++ b/chunk_includes/consent_2019.html
@@ -32,18 +32,12 @@
     }
   </style>
 </head>
-<!--
-BEFORE THE PAGE CONTENT
-You might want to cache the images you are using in the experiment
-if timings are going to be recorded during the experiment.
-Below is an example of how to load an image without showing it.
--->
+
 <div style="display:none">
-  <!-- List images here in the same syntax -->
-  <!-- <img src = "___image src____" /> -->
+ 
+  <img src = "https://images.app.goo.gl/SWBUHz72v1SYRkYbA" /> -->
 </div>
 
-<!-- Start of the actual, visible body of the file -->
 <form style="width: 60em; margin-top: 2em;">
 
 <table>
@@ -54,9 +48,9 @@ Below is an example of how to load an image without showing it.
 </center>
   <hr><br>
   
-<p><u>Purpose of the research:</u></p> To detect speech errors in a person's reading of a children's story (roughly 30 minutes).
+<p><u>Purpose of the research:</u></p> To see if individuals can tap to a beat (roughly 4 minutes).
  
-<p><u>What you will do in this research:</u></p> In this experiment, you will listen to a children's story. The speaker will sometimes say the wrong word and your task is to indicate when you detect her speech errors. 
+<p><u>What you will do in this research:</u></p> In this experiment, you will listen to a series of beats. When you hear each beat, press the spacebar. The beats will sometimes be fast or slow.
      
 <p><u>Risks:</u></p> There are no anticipated risks associated with participating in this study.
  
@@ -72,7 +66,7 @@ Below is an example of how to load an image without showing it.
  
 <p><u>Contact:</u></p> If you have questions or concerns about this research, please contact:
  
-<p><b>Anthony Yacovone (anthony_yacovone@g.harvard.edu)</b></p>
+<p><b>Oluwatobi Abubakare (oluwatobi_abubakare@g.harvard.edu)</b></p>
 <br>
 <hr>
 <br>
