--- a/chunk_includes/1.5hz_block.html
+++ b/chunk_includes/1.5hz_block.html
@@ -38,7 +38,7 @@
     <!-- only tested on wav and mp3 formats, ogg likely to work as well
     src has to be a url, cannot be a file on your computer   -->
     <audio autoplay>
-      <source src="https://raw.githubusercontent.com/anthembnw/Beat_TAP1/master/chunk_includes/1.5hz_block.mp3" type="audio/mpeg">
+      <source src="https://raw.githubusercontent.com/anthembnw/Beat_TAP1/master/chunk_includes/1.5hz_block_cut.mp3" type="audio/mpeg">
     </audio>
   </div> 
 
