--- a/chunk_includes/handplace.html
+++ b/chunk_includes/handplace.html
@@ -36,7 +36,7 @@
 <div style="display:none">
  
   <img src = "handtap1.jpg" /> 
-  <img src = handtap2.jpg /> -->
+  <img src = handtap2.jpeg /> -->
 </div>
 
 <form style="width: 60em; margin-top: 2em;">
