--- a/chunk_includes/handplace.html
+++ b/chunk_includes/handplace.html
@@ -2,62 +2,32 @@
 <html lang="en">
 
 <head>
-  <title> Example of Hand Placement </title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <style type="text/css">
-    p {
-      text-align: left; 
-      font-size: large;   }
-
-    a {
-      text-decoration: none;
-    }
-
-    form{
-      margin: -100 auto 10;
-      width: 75%;
-      clear: both;
-      padding: 2%;
-      border: 1px;
-      border-style: solid;
-      background-color: black;
-      padding-top: 2em;
-    }
-
-    input[type=submit] {
-      width: 500px;
-      height: 100px;
-      cursor:pointer;
-      font-size: large;
-    }
-  </style>
-</head>
-
-<div style="display:none">
  
-  <img src = "handtap1.jpg" /> 
-  <img src = handtap2.jpeg /> -->
-</div>
+  <title> Example of Hand Placement </title>
+</head>
+  
+<body>
+  <center>
+  <p> Below are examples of different hand placements on the keyboard to make pressing the spacebar easier. </p>
+  </body>
+    </center>
+
+<div>
+  <table>
+    <center>
+  <img src = "https://raw.githubusercontent.com/anthembnw/Beat_TAP1/master/chunk_includes/Handplace1.jpg" style="width:200px;height:300px;"> 
+  <img src = "https://raw.githubusercontent.com/anthembnw/Beat_TAP1/master/chunk_includes/Handplace2.jpg" style="width:200px;height:300px;">
+  <img src = "https://raw.githubusercontent.com/anthembnw/Beat_TAP1/master/chunk_includes/Handplace3.jpg" style="width:200px;height:300px;"> 
+      </div>
+    </table>
+      </center>
 
 <form style="width: 60em; margin-top: 2em;">
-
-<table>
-
-<center>
-  <h1> Study Information! </h1>
-  <i> Please read this consent agreement carefully before deciding whether to participate in this study. </i>
-</center>
-  <hr><br>
-  
-<p><u> The above pictures display different ways you can place your hand on your keyboard to be comfortable with tapping. </p>
-  
-</table>
-
+  <center>
 <p> If you are done viewing the pictures, then press Enter to continue! 
-
-</tr>
+    </center>
 <tr>
 <td colspan="2">
-<label class="error" for="consent"></label>
+<label class="error" for="handplace"></label>
 </td>
 </tr>
