--- a/chunk_includes/Volumecheck.html
+++ b/chunk_includes/Volumecheck.html
@@ -1,23 +1,55 @@
+<style media="screen" type="text/css">
+  div {
+    width: 60em;
+    font-size: large;
+    padding-left: 1em;
+    padding-right: 1em;
+    padding-bottom: 1em;
+  }
+
+  h3 {
+    font-size: 40pt;
+    margin-top: 1em;
+    margin-bottom: 1em;
+    text-align: center;
+  }
+
+  p {
+    font-size: large;
+    text-align: justify;
+  }
+
+  body {
+    color: white;
+    background-color: black;
+    margin-left: .5em;
+    margin-right: .5em;
+    margin-top: 3em;
+    font-size: 24pt;
+  }
+
+</style>
+
 <html>
-  <body>
-    <div class="sound" style="width: auto; height: auto; z-index: 0">
-    <audio autoplay>
-      <source src="https://raw.githubusercontent.com/anthembnw/Beat_TAP1/master/chunk_includes/Volume_block.mp3" type="audio/mpeg">
-    </audio>
-  </div> 
+  <body>
+    <div class="sound" style="width: auto; height: auto; z-index: 0">
+    <audio autoplay>
+      <source src="https://raw.githubusercontent.com/anthembnw/Beat_TAP1/master/chunk_includes/Volume_block.mp3" type="audio/mpeg">
+    </audio>
+  </div> 
 
-    <div style="margin: 0 auto; text-align: justify; border:1px solid white; background-color:black">
+    <div style="margin: 0 auto; text-align: justify; border:1px solid white; background-color:black">
 
-      <h1><u>Check Volume</h1><u>
+      <h1><u>Check Volume</h1></u>
 
-      <form id="inputarea" onSubmit="return false;">
-        <p>Here you will hear some random beats so you can check your volume level before the study begins. We recommend wearing headphones/earphones. 
+      <form id="inputarea" onSubmit="return false;">
+        <p> Here you will hear some random beats so you can check your volume level before the study begins. We recommend wearing headphones/earphones. 
         As you hear the beats, adjust your volume to a level that is comfortable for you. </p> 
-      
-        <p style="text-align:left;"> When you are done adjusting your volume, type continue and hit 'Enter': <input style = "font-size: large" type = "text">
-     
-    </script>
+      
+        <p style="text-align:left;"> When you are done adjusting your volume, type continue and hit 'Enter': <input style = "font-size: large" type = "text">
+     
+    </script>
 
-  </body>
+  </body>
 
 </html>
