--- a/chunk_includes/handplace.html
+++ b/chunk_includes/handplace.html
@@ -3,12 +3,12 @@
 
 <head>
  
-  <title> Example of Hand Placement </title>
+  <h1> Example of Hand Placement </h1>
 </head>
   
 <body>
   <center>
-  <p> Below are examples of different hand placements on the keyboard to make pressing the spacebar easier. </p>
+  <p> <u> Below are examples of different hand placements on the keyboard to make pressing the spacebar easier. </p></u>
   </body>
     </center>
 
@@ -26,6 +26,7 @@
   <center>
 <p> If you are done viewing the pictures, then press Enter to continue! 
     </center>
+  <input type="button" id="button" value="Press Enter" style="font-size: large;">
 <tr>
 <td colspan="2">
 <label class="error" for="handplace"></label>
