--- a/chunk_includes/welcome_beeps.html
+++ b/chunk_includes/welcome_beeps.html
@@ -46,8 +46,8 @@ body {
 </center>
 <br>
 <hr><br>
-<p>In this study, you will be listening to someone read a children's story! The story is roughly 30 minutes long. Your task is to hit the Space bar whenever you hear a letter "P" sound.</p>
-<p>You will start by listening to the introduction of the story to practice. There are <b>2</b> instances of the sound "P" in this practice introduction. See if you can get them all!</p>
+<p>In this study, you will be listening to someone read a children's story! The story is roughly 30 minutes long. Your task is to hit the Space bar whenever there you hear a short beep sound.</p>
+<p>You will start by listening to the introduction of the story to practice. There are <b>2</b> short beeps in this practice introduction. See if you can get them all!</p>
 <br>
  
 <hr>
@@ -58,7 +58,6 @@ body {
   <li>You will not be able to pause the story after starting! So please give yourself 30-40 minutes of uninterrupted time!</li>
   <li>Make sure to pay attention to the story too. There may be comprehension questions about the content of the story.</li>
   <li>At the end of the audio, just <u>type the last word that you heard</u> in order to continue with the study.</li>
-
 </ul>
 <br>
 
@@ -68,8 +67,8 @@ body {
 <font>
   1. <i>What is your task?</i><br>
   <td>
-    <input name="question1r" type="radio" value="left" class="obligatory" id="q1left" /><label for="q1left"> Push Space whenever I hear a "P" sound</label><br>
-    <input name="question1r" type="radio" value="right" id="q1right"/><label for="q1right"> Push Space whenever I hear a "P" sound and pay attention to the story!</label>
+    <input name="question1r" type="radio" value="left" class="obligatory" id="q1left" /><label for="q1left"> Push Space whenever I hear a short beep</label><br>
+    <input name="question1r" type="radio" value="right" id="q1right"/><label for="q1right"> Push Space whenever I hear a short beep and pay attention to the story!</label>
   </td>
 <br><br>
   
@@ -80,7 +79,7 @@ body {
   </td>
 <br><br>
   
-  3. <i>How many times will I hear a "P" sound in the practice introduction audio?</i><br>
+  3. <i>How many times will I hear a beep sound in the practice introduction audio?</i><br>
   <td>
     <input name="question3r" type="radio" value="left" class="obligatory" id="q3left" /><label for="q3left"> 4!</label><br>
     <input name="question3r" type="radio" value="right" class= id="q3right"/><label for="q3right"> 2!</label>
